# GGST-Wiki-Bot

./: Cargo.toml  LICENSE  README.md
docs/: archtecture.md  code_style.md
src/: main.rs
