[package]
name = "GGST-Wiki-Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"          # ← dotenv → dotenvy に移行推奨（メンテが継続中）
reqwest = { version = "0.12.15", features = ["json"] }  # ← JSONサポート必須
serde = { version = "1.0.219", features = ["derive"] }  # ← derive を有効化
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }     # ← async実行のために "full" 推奨
